<resources>
    <string name="app_name">JustMe</string>
    <string name="edit_message">Enter a message</string>
    <string name="send_message">Send</string>
    <string name="record">Rec</string>
    <string name="gallery_upload">Pic</string>
    <string name="register">Register</string>
    <string name="credit_card">Card number</string>
    <string name="cvc">CVC</string>
    <string name="month_short">MM</string>
    <string name="year_short">YY</string>
    <string name="address_line_1">Address line 1</string>
    <string name="postcode">Postcode</string>
    <string name="town_city">Town / City</string>
    <string name="cardholder">Cardholder name</string>
    <string name="save">Save</string>
    <string name="address_line_2">Address line 2</string>
    <string name="less"><![CDATA[<]]></string>
    <string name="more"><![CDATA[>]]></string>
    <string name="zero_amount">0.00</string>
    <string name="chf">CHF</string>
    <string name="preference_file_key">ch.fhnw.justme.PREFERENCE_FILE_KEY</string>
    <string name="card_number_key">ch.fhnw.justme.preferences.card_number</string>
    <string name="full_name_key">ch.fhnw.justme.preferences.full_name</string>
    <string name="customer_id_key">ch.fhnw.justme.preferences.customer_id</string>
    <string name="approve">Approve</string>
    <string name="with">with</string>
    <string name="initText">Charge card</string>
    <string name="thankyou">Thank you for your purchase!</string>
    <string name="full_name">Full name</string>
</resources>
