<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable name="pref" type="ch.fhnw.justme.PreferencesActivity.Preferences"/>
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/creditCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:inputType="number"
            android:hint="@string/credit_card"
            android:text="@={pref.cardNumber}"
            app:layout_constraintEnd_toEndOf="@+id/cardholder_name"
            app:layout_constraintStart_toStartOf="@+id/cardholder_name"
            app:layout_constraintTop_toBottomOf="@+id/cardholder_name"
            />

        <EditText
            android:id="@+id/street_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/address_line_1"
            android:text="@={pref.addressLineOne}"
            app:layout_constraintEnd_toEndOf="@+id/linearLayout"
            app:layout_constraintStart_toStartOf="@+id/linearLayout"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        <EditText
            android:id="@+id/address_line_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/address_line_2"
            android:text="@={pref.addressLineTwo}"
            app:layout_constraintEnd_toEndOf="@+id/street_number"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/street_number"
            app:layout_constraintTop_toBottomOf="@+id/street_number" />

        <EditText
            android:id="@+id/postcode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/postcode"
            android:text="@={pref.postcode}"
            app:layout_constraintEnd_toEndOf="@+id/address_line_two"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/address_line_two"
            app:layout_constraintTop_toBottomOf="@+id/address_line_two" />

        <EditText
            android:id="@+id/town_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/town_city"
            android:text="@={pref.town}"
            app:layout_constraintEnd_toEndOf="@+id/postcode"
            app:layout_constraintStart_toStartOf="@+id/postcode"
            app:layout_constraintTop_toBottomOf="@+id/postcode" />

        <EditText
            android:id="@+id/cardholder_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/cardholder"
            android:text="@={pref.cardHolderName}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="@+id/creditCard"
            app:layout_constraintStart_toStartOf="@+id/creditCard"
            app:layout_constraintTop_toBottomOf="@+id/creditCard">

            <EditText
                android:id="@+id/CVC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".25"
                android:ems="10"
                android:inputType="number|textPersonName"
                android:hint="@string/cvc"
                android:text="@={pref.cvc}"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="182dp" />

            <EditText
                android:id="@+id/month"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:ems="10"
                android:inputType="number"
                android:hint="@string/month_short"
                android:text="@={pref.mm}"
                tools:layout_editor_absoluteY="267dp" />

            <EditText
                android:id="@+id/year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:ems="10"
                android:inputType="number"
                android:hint="@string/year_short"
                android:text="@={pref.yy}"
                tools:layout_editor_absoluteX="403dp"
                tools:layout_editor_absoluteY="342dp" />
        </LinearLayout>

        <Button
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/save"
            android:onClick="save"
            app:layout_constraintEnd_toEndOf="@+id/town_city"
            app:layout_constraintStart_toStartOf="@+id/town_city"
            app:layout_constraintTop_toBottomOf="@+id/town_city" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>