<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WatsonActivity">

    <EditText
        android:id="@+id/editText"
        android:layout_width="176dp"
        android:layout_height="49dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/edit_message"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/send-button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/send-button"
        android:layout_width="60dp"
        android:layout_height="51dp"
        android:layout_marginStart="8dp"
        android:onClick="sendMessage"
        android:text="@string/send_message"
        app:layout_constraintBottom_toBottomOf="@+id/editText"
        app:layout_constraintStart_toEndOf="@+id/editText"
        app:layout_constraintTop_toTopOf="@+id/editText"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/mic-button"
        android:layout_width="60dp"
        android:layout_height="51dp"
        android:layout_marginStart="8dp"
        android:onClick="recordAudio"
        android:text="@string/record"
        app:layout_constraintBottom_toBottomOf="@+id/send-button"
        app:layout_constraintStart_toEndOf="@+id/send-button"
        app:layout_constraintTop_toTopOf="@+id/send-button"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/mic-button2"
        android:layout_width="60dp"
        android:layout_height="51dp"
        android:layout_marginStart="8dp"
        android:onClick="galleryUpload"
        android:text="@string/gallery_upload"
        app:layout_constraintBottom_toBottomOf="@+id/mic-button"
        app:layout_constraintStart_toEndOf="@+id/mic-button"
        app:layout_constraintTop_toTopOf="@+id/mic-button" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/chat_history"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toTopOf="@+id/editText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>