<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/checkout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/initText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        android:text="@string/initText"
        android:textAlignment="textStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/cardNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="@+id/initText"
        app:layout_constraintStart_toStartOf="@+id/initText"
        app:layout_constraintTop_toBottomOf="@+id/initText" />

    <TextView
        android:id="@+id/with"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/with"
        app:layout_constraintEnd_toEndOf="@+id/cardNumber"
        app:layout_constraintStart_toStartOf="@+id/cardNumber"
        app:layout_constraintTop_toBottomOf="@+id/cardNumber" />

    <TextView
        android:id="@+id/amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="@+id/with"
        app:layout_constraintStart_toStartOf="@+id/with"
        app:layout_constraintTop_toBottomOf="@+id/with" />

    <Button
        android:id="@+id/approve"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/approve"
        app:layout_constraintEnd_toEndOf="@+id/amount"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="@+id/amount"
        app:layout_constraintTop_toBottomOf="@+id/amount" />
</androidx.constraintlayout.widget.ConstraintLayout>